--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,25 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Helvetica"
+  font-family: "Roboto"
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: black;
+  /* border-radius: 40px; */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 3rem;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(115, 115, 115);
+  border-radius: 10px;
 }
